--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -52,7 +52,7 @@ input[type="submit"] {
 
 /* Clearfix */
 
-.group:after {
+.group::after {
   content: "";
   display: block;
   clear: both;
